--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "ngx-cookie-service": "^17.0.1",
+    "chart.js": "^4.4.1",
+    "ngx-cookie-service": "^15.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.2.1",
